Fixed overlapping menu in profile page

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -95,7 +95,7 @@ html, body {
         border-radius: 100%;
     }
 
-    .header {
+    .headerx {
         width: 300px;
         vertical-align: top;
 
